fix: show step marks in high contrast mode

--- a/packages/components/src/components/slider/slider.css
+++ b/packages/components/src/components/slider/slider.css
@@ -136,6 +136,12 @@
   border-radius: var(--telekom-radius-circle);
 }
 
+@media screen and (forced-colors: active), (-ms-high-contrast: active) {
+  [part='step-mark'] {
+    border: 2px solid;
+  }
+}
+
 [part='meta'] {
   display: flex;
   justify-content: space-between;
